--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,21 @@
 [versions]
-agp = "8.5.1"
+agp = "8.6.1"
 kotlin = "1.9.0"
-coreKtx = "1.12.0"
+coreKtx = "1.13.1"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
-lifecycleRuntimeKtx = "2.7.0"
-activityCompose = "1.8.2"
-composeBom = "2023.08.00"
-usercentrics="2.15.4"
-usercentrics-ui="2.15.4"
-kotlinx-coroutines-android="1.6.4"
-kotlinx-serialization-properties="1.4.1"
-kotlinx-serialization-json-jvm="1.4.1"
-appcompat = "1.6.1"
-material = "1.11.0"
-activity = "1.8.0"
+junitVersion = "1.2.1"
+espressoCore = "3.6.1"
+lifecycleRuntimeKtx = "2.8.6"
+activityCompose = "1.9.2"
+composeBom = "2024.09.02"
+#usercentrics="2.15.6"
+usercentrics-ui="0.2.17.1.0"
+#kotlinx-coroutines-android="1.8.0"
+#kotlinx-serialization-properties="1.4.1"
+#kotlinx-serialization-json-jvm="1.4.1"
+appcompat = "1.7.0"
+material = "1.12.0"
+activity = "1.9.2"
 constraintlayout = "2.1.4"
 
 [libraries]
@@ -34,10 +34,10 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 usercentrics-ui = { module = "com.usercentrics.sdk:usercentrics-ui", version.ref = "usercentrics-ui"}
-usercentrics = { module = "com.usercentrics.sdk:usercentrics", version.ref = "usercentrics"}
-kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinx-coroutines-android"}
-kotlinx-serialization-properties = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-properties-jvm", version.ref = "kotlinx-serialization-properties"}
-kotlinx-serialization-json-jvm = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json-jvm", version.ref = "kotlinx-serialization-json-jvm"}
+#usercentrics = { module = "com.usercentrics.sdk:usercentrics", version.ref = "usercentrics"}
+#kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinx-coroutines-android"}
+#kotlinx-serialization-properties = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-properties-jvm", version.ref = "kotlinx-serialization-properties"}
+#kotlinx-serialization-json-jvm = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json-jvm", version.ref = "kotlinx-serialization-json-jvm"}
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
