Upgraded to sdk v2.23.0 Also: 	- changed assets type to webp 	- added custom hyperlinks implementation 	- minor corrections and improvements Changes to be committed: 	modified:   .idea/deploymentTargetSelector.xml 	modified:   .idea/misc.xml 	deleted:    .kotlin/sessions/kotlin-compiler-8453445973444048854.salive 	modified:   app/build.gradle.kts 	modified:   app/proguard-rules.pro 	modified:   app/src/main/AndroidManifest.xml 	new file:   app/src/main/assets/Chalkboard-Regular.ttf 	modified:   app/src/main/java/eu/ruimgreis/testauto/init/Init.kt 	modified:   app/src/main/java/eu/ruimgreis/testauto/layer/BannerSettings.kt 	new file:   app/src/main/java/eu/ruimgreis/testauto/links/DeepLinkActivity.kt 	modified:   app/src/main/java/eu/ruimgreis/testauto/logs/PrintCMPData.kt 	modified:   app/src/main/java/eu/ruimgreis/testauto/logs/PrintGDPRData.kt 	modified:   app/src/main/java/eu/ruimgreis/testauto/logs/PrintTCFData.kt 	modified:   app/src/main/java/eu/ruimgreis/testauto/model/SDKDefaults.kt 	modified:   app/src/main/java/eu/ruimgreis/testauto/utils/CoreMethods.kt 	modified:   app/src/main/java/eu/ruimgreis/testauto/webview/WebView.kt 	deleted:    app/src/main/res/drawable/banner.png 	new file:   app/src/main/res/drawable/banner.webp 	deleted:    app/src/main/res/drawable/ic_launcher.png 	new file:   app/src/main/res/drawable/ic_launcher.webp 	deleted:    app/src/main/res/mipmap-hdpi/ic_launcher.png 	new file:   app/src/main/res/mipmap-hdpi/ic_launcher.webp 	deleted:    app/src/main/res/mipmap-mdpi/ic_launcher.png 	new file:   app/src/main/res/mipmap-mdpi/ic_launcher.webp 	deleted:    app/src/main/res/mipmap-xhdpi/ic_launcher.png 	new file:   app/src/main/res/mipmap-xhdpi/ic_launcher.webp 	deleted:    app/src/main/res/mipmap-xxhdpi/ic_launcher.png 	new file:   app/src/main/res/mipmap-xxhdpi/ic_launcher.webp 	deleted:    app/src/main/res/mipmap-xxxhdpi/ic_launcher.png 	new file:   app/src/main/res/mipmap-xxxhdpi/ic_launcher.webp 	deleted:    app/src/main/res/playstore

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TestAuto"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".webview.WebviewActivity"
@@ -23,6 +24,19 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".links.DeepLinkActivity"
+            android:exported="true">
+
+            <intent-filter android:label="deep_link">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:host="${hostName}"
+                    android:scheme="${schemeName}" />
             </intent-filter>
         </activity>
     </application>
